# openhexa-pipelines-iaso

./: .gitignore  FORM_SUBMISSION.md  LICENSE  pyproject.toml
.github/workflows/: push-extract_submissions.yml  push-iaso-extract-metadata.yml  push-iaso-extract-orgunits.yml  push-iaso-extract-submissions.yml  push_iaso_extract_metadata.yml  push_iaso_extract_orgunits.yml  push_iaso_extract_submissions.yml  push_iaso_import_submissions.yml  push_iaso_parameter_test.yml  ruff.yaml  ruff.yml
extract_submissions/: pipeline.py
extract_submissions/.github/workflows/: push-pipeline.yml
iaso_extract_metadata/: .gitignore  Readme.md  pipeline.py  requirements.txt
iaso_extract_metadata/.github/workflows/: push-pipeline.yml
iaso_extract_orgunits/: Readme.md  pipeline.py  requirements.txt  utils.py
iaso_extract_submissions/: .gitignore  Readme.md  pipeline.py  requirements.txt
iaso_import_submissions/: .gitignore  README.md  iaso_client.py  iaso_io.py  pipeline.py  requirements.txt  template.py  utils.py  validation.py
iaso_parameter_test/: pipeline.py  requirements.txt
iaso_parameter_test/.github/workflows/: push-pipeline.yml
